# lcpp_ngin

./: .gitignore  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
.github/workflows/: build-android.yml  build-linux.yml  build-macos.yml  build-windows.yml
android/: CMakeLists.txt  build.gradle.kts  settings.gradle.kts
android/app/src/main/kotlin/org/sjrobinsonconsulting/llamacpp/: MainActivity.kt
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/lcpp_ngin_example/: MainActivity.kt
example/android/app/src/main/kotlin/com/example/llamacpp_example/: MainActivity.kt
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: lcpp_ngin.dart  llamacpp_ngin.dart
lib/src/: bindings.dart  lcpp_ngin.dart  llama_exception.dart  llamacpp_ngin.dart
lib/src/params/: context_params.dart  lcpp_params.dart
linux/: CMakeLists.txt
src/: CMakeLists.txt  llamacpp_common.h  llamacpp_constants.hpp  llamacpp_llm.cpp  llamacpp_llm.h  llamacpp_platform.h  llamacpp_utils.cpp  llamacpp_utils.h
windows/: CMakeLists.txt
